<resources>
    <string name="app_name">WienerAttack</string>
    <string name="settings">Settings</string>
    <string name="length">Key length:</string>
    <string name="r">R length:</string>
    <string name="key_512">512</string>
    <string name="key_1024">1024</string>
    <string name="key_2048">2048</string>
    <string name="generate">Generate</string>
    <string name="details">Key details</string>
    <string name="details_modulus">Modulus:</string>
    <string name="details_private">Private key:</string>
    <string name="details_public">Public key:</string>
    <string name="encrypt">Encrypt</string>
    <string name="encrypt_message">Message:</string>
    <string name="encrypt_message_error">Message cannot be empty!</string>
    <string name="encrypt_do">Encrypt</string>
    <string name="hack_do">Hack</string>
    <string name="encrypted">Encrypted string:</string>
    <string name="original_message">Original message:</string>
    <string name="decrypted_message">Decrypted message:</string>
    <string name="sorry">Sorry, we cannot find private key</string>
    <string name="hack_successful">Hack successful!</string>

</resources>
